# pip-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pip-bot.service  pyproject.toml
.copilot/: copilot-instructions.md
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: prompt-next-feature-claude.md  prompt-next-feature.md  prompt-review-branch.md  start-feature.md
.github/workflows/: pr-validation.yml
bot/: __init__.py  __main__.py  client.py
cogs/: __init__.py  _views.py  nas.py  notify.py  pihole.py  system.py
config/: __init__.py  settings.py
scripts/: deploy.sh  deploy_branch.sh  setup_rpi.sh
services/: __init__.py  base.py  system.py
services/actions/: __init__.py  handler.py  registry.py
services/email/: __init__.py  client.py
services/nas/: __init__.py  client.py
services/pihole/: __init__.py  client.py
tests/: __init__.py  test_imports.py
tests/bot/: test_client.py
tests/cogs/: test_system.py
tests/config/: test_settings.py
tests/services/: __init__.py  test_system.py
tests/services/actions/: test_handler.py
tests/services/email/: test_client.py
tests/services/nas/: test_client.py
tests/services/pihole/: test_client.py
tests/utils/: __init__.py  test_filters.py  test_logger.py  test_validators.py
utils/: __init__.py  concurrency.py  filters.py  logger.py  validators.py
